added week1 and week2 reflections

--- a/log.tex
+++ b/log.tex
@@ -46,66 +46,58 @@ are also free to add your own subsections.
 
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Introduction to Course}
 
-?
+Simple introduction to the course. Apparently this Parnas guy is going to appear frequently in this course.
 
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Software
   Engineering Profession}
 
-?
+Correctness in software is extemely important, as software failures can have catostrophic affects, both financial and social (can even cause loss of life).
 
 \subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} Git, Doxygen and A1}
 
-?
+Git is a version controling system for software, which can be very important when you need to find old code. Doxygen is a tool that automatically generates documentation for your code given a specific commenting format.
 
 \subsubsection *{Textbook Reading (Ghezzi, H\&S or other)}
 
-?
+Did not read the textbook.
 
 \subsubsection *{Assignment Progress}
 
-?
+I didn't start the project this week.
 
 \subsubsection *{Midterm/Final Review Progress}
 
-?
-
-\subsubsection *{Reflection Relating Course Topics, Other Courses, Other Experiences}
-
-?
+Did not review for the midterm.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section {Week \theweeknum \addtocounter{weeknum}{1} ?}
+\section {Week \theweeknum \addtocounter{weeknum}{1}}
 
 \subsubsection *{Dates} Jan 13 to Jan 17
 
-\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ?}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1}}
 
-?
+Solidified the idea of requirements -> design -> implementation -> verification -> maintenance.
 
-\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ?}
+\subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1}}
 
-?
+Learnt about the various important traits of software (correctness, usability, maintainability, readability, efficiency, etc ...)
 
-\subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} ?}
+\subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1}}
 
-?
+Learnt about the basics of latex, and how to compile .tex files on my computer.
 
 \subsubsection *{Textbook Reading (Ghezzi, H\&S or other)}
 
-?
+Did not read this textbook section.
 
 \subsubsection *{Assignment Progress}
 
-?
+Finished the majority of the code, documentation, and test cases for the Assignment.
 
 \subsubsection *{Midterm/Final Review Progress}
 
-?
-
-\subsubsection *{Reflection Relating Course Topics, Other Courses, Other Experiences}
-
-?
+Did not review for the midterm/final.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
