updated learning log

--- a/log.tex
+++ b/log.tex
@@ -107,27 +107,27 @@ Did not review for the midterm/final.
 
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ?}
 
-?
+Wasn't able to attend this lecture due to family circumstances.
 
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} ?}
 
-?
+Learned about abstraction via module interface specifications, which is important compenent of effective software design. It allows you to define the "interface"/"actions" of a module, without revealing the inner workings and implementation. All that matters to the user, is what each class/functions does. 
 
 \subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} ?}
 
-?
+Reviewed important discrete math concepts relevant to the scope of this course and software engineering as a whole.
 
 \subsubsection *{Textbook Reading (Ghezzi, H\&S or other)}
 
-?
+Did not read this textbook section.
 
 \subsubsection *{Assignment Progress}
 
-?
+Completed the assignment and created a comprehensive list of test cases.
 
 \subsubsection *{Midterm/Final Review Progress}
 
-?
+Did not review for the midterm of final this week.
 
 \subsubsection *{Reflection Relating Course Topics, Other Courses, Other Experiences}
 
