--- a/log.tex
+++ b/log.tex
@@ -51,7 +51,7 @@ Simple introduction to the course. Apparently this Parnas guy is going to appear
 \subsubsection *{Lecture \thelectnum \addtocounter{lectnum}{1} Software
   Engineering Profession}
 
-Correctness in software is extemely important, as software failures can have catostrophic affects, both financial and social (can even cause loss of life).
+Correctness in software is extemely important, as software failures can have catostrophic affects, both financial and social (can even cause loss of life). For example, we briefly mentioned a couple of examples of Software failures in real life, including the infamous Ariane 5 disaster.
 
 \subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1} Git, Doxygen and A1}
 
@@ -85,7 +85,7 @@ Learnt about the various important traits of software (correctness, usability, m
 
 \subsubsection *{Tutorial \thetutnum \addtocounter{tutnum}{1}}
 
-Learnt about the basics of latex, and how to compile .tex files on my computer.
+Learnt about the basics of latex, and how to compile .tex files on my computer. I also integrated LaTeX development through my own workflow, via LaTeX workshop in vscode.
 
 \subsubsection *{Textbook Reading (Ghezzi, H\&S or other)}
 
@@ -93,7 +93,7 @@ Did not read this textbook section.
 
 \subsubsection *{Assignment Progress}
 
-Finished the majority of the code, documentation, and test cases for the Assignment.
+Finished the majority of the code, documentation, and test cases for the Assignment. The problem/code itself was not difficult in the slightest, however it got me thinking about good code and documentation. It helped me understand the power of interface specifications, and how software specifications (like the one's we were given) can be extremely ambigous.
 
 \subsubsection *{Midterm/Final Review Progress}
 
@@ -123,7 +123,7 @@ Did not read this textbook section.
 
 \subsubsection *{Assignment Progress}
 
-Completed the assignment and created a comprehensive list of test cases.
+Completed the assignment and created a comprehensive list of test cases. I could've done the assignment in 20 different ways depending on what assumptions and implementations I used. I imagine that my partners test cases will fail because our differences in assumptions.
 
 \subsubsection *{Midterm/Final Review Progress}
 
